syntax = "proto3";
import "Protos/CustomTypes.proto";
import "google/protobuf/empty.proto";

option crharp_namespace = "MarketIntelligency.Web.Grpc.Protos";

service StreamEventGrpc {
	rpc ReceiveEvent (stream EventMessage) returns (google.protobuf.Empty);
}